"local-fa has been translated successfully by Mahsa Golchian"

--- a/rest_framework/locale/fa/LC_MESSAGES/django.po
+++ b/rest_framework/locale/fa/LC_MESSAGES/django.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
-# Translators:
+#
+# Translators: Mahsa Golchian | mahsa.gol89@gmail.com | https://github.com/m9i
 msgid ""
 msgstr ""
 "Project-Id-Version: Django REST framework\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-12 16:13+0100\n"
 "PO-Revision-Date: 2016-07-12 15:14+0000\n"
-"Last-Translator: Thomas Christie <tom@tomchristie.com>\n"
+"Last-Translator: Mahsa Golchian <mahsa.gol89@@gmail.com>\n"
 "Language-Team: Persian (http://www.transifex.com/django-rest-framework-1/django-rest-framework/language/fa/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,421 +19,421 @@ msgstr ""
 
 #: authentication.py:73
 msgid "Invalid basic header. No credentials provided."
-msgstr ""
+msgstr "هدر یا سرآیند پایه نامعتبر است. هیچ گواهی‌نامه‌ای ارائه نشده است."
 
 #: authentication.py:76
 msgid "Invalid basic header. Credentials string should not contain spaces."
-msgstr ""
+msgstr "هدر یا سرآیند پایه نامعتبر است. رشته گواهی‌نامه‌ها نباید شامل اسپس (فضای خالی یا فاصله) باشد."
 
 #: authentication.py:82
 msgid "Invalid basic header. Credentials not correctly base64 encoded."
-msgstr ""
+msgstr "هدر یا سرآیند پایه نامعتبر است. گواهی‌نامه‌ها به درستی با base64 رمزگذاری نشده‌اند."
 
 #: authentication.py:99
 msgid "Invalid username/password."
-msgstr ""
+msgstr "نام کاربری یا گذرواژه نامعتبر است."
 
 #: authentication.py:102 authentication.py:198
 msgid "User inactive or deleted."
-msgstr ""
+msgstr "کاربر غیرفعال است و یا حذف شده است."
 
 #: authentication.py:176
 msgid "Invalid token header. No credentials provided."
-msgstr ""
+msgstr "کلمه رمزی سرآیند نامعتبر است.هیچ گواهی‌نامه‌ای ارائه نشده است. "
 
 #: authentication.py:179
 msgid "Invalid token header. Token string should not contain spaces."
-msgstr ""
+msgstr "کلمه رمزی سرآیند نامعتبر است. رشته کلمه رمزی نباید شامل اسپس (فضای خالی یا فاصله) باشد. "
 
 #: authentication.py:185
 msgid ""
 "Invalid token header. Token string should not contain invalid characters."
-msgstr ""
+msgstr "کلمه رمزی سرآیند نامعتبر است. کلمه رمزی نباید شامل کارکتر نامعتبر باشد. "
 
 #: authentication.py:195
 msgid "Invalid token."
-msgstr ""
+msgstr "کلمه رمز نامعتبر است."
 
 #: authtoken/apps.py:7
 msgid "Auth Token"
-msgstr ""
+msgstr "کلمه رمز معتبر"
 
 #: authtoken/models.py:15
 msgid "Key"
-msgstr ""
+msgstr "کلید"
 
 #: authtoken/models.py:18
 msgid "User"
-msgstr ""
+msgstr "کاربر"
 
 #: authtoken/models.py:20
 msgid "Created"
-msgstr ""
+msgstr "ساخته شد."
 
 #: authtoken/models.py:29
 msgid "Token"
-msgstr ""
+msgstr "کلمه رمز"
 
 #: authtoken/models.py:30
 msgid "Tokens"
-msgstr ""
+msgstr "کلمات رمز"
 
 #: authtoken/serializers.py:8
 msgid "Username"
-msgstr ""
+msgstr "نام کاربری"
 
 #: authtoken/serializers.py:9
 msgid "Password"
-msgstr ""
+msgstr "گذرواژه"
 
 #: authtoken/serializers.py:20
 msgid "User account is disabled."
-msgstr ""
+msgstr "حساب کاربری غیرفعال شد."
 
 #: authtoken/serializers.py:23
 msgid "Unable to log in with provided credentials."
-msgstr ""
+msgstr "با اعتبارنامه ارائه شده امکان ورود به سیستم وجود ندارد."
 
 #: authtoken/serializers.py:26
 msgid "Must include \"username\" and \"password\"."
-msgstr ""
+msgstr "باید شامل نام کاربری و گذرواژه باشد."
 
 #: exceptions.py:49
 msgid "A server error occurred."
-msgstr ""
+msgstr "خطای سرور رخ داده است."
 
 #: exceptions.py:84
 msgid "Malformed request."
-msgstr ""
+msgstr "درخواست ناقص."
 
 #: exceptions.py:89
 msgid "Incorrect authentication credentials."
-msgstr ""
+msgstr "احراز هویت نادرست."
 
 #: exceptions.py:94
 msgid "Authentication credentials were not provided."
-msgstr ""
+msgstr "احراز هویت ارائه نشده است"
 
 #: exceptions.py:99
 msgid "You do not have permission to perform this action."
-msgstr ""
+msgstr "شما اجازه انجام این عمل را ندارید."
 
 #: exceptions.py:104 views.py:81
 msgid "Not found."
-msgstr ""
+msgstr "پیدا نشد."
 
 #: exceptions.py:109
 msgid "Method \"{method}\" not allowed."
-msgstr ""
+msgstr "روش \"{method}\" مجاز نیست."
 
 #: exceptions.py:120
 msgid "Could not satisfy the request Accept header."
-msgstr ""
+msgstr "رد درخواست توسط سرآیند"
 
 #: exceptions.py:132
 msgid "Unsupported media type \"{media_type}\" in request."
-msgstr ""
+msgstr "نوع رسانه \"{media_type}\" در درخواست پشتیبانی نشده‌است."
 
 #: exceptions.py:145
 msgid "Request was throttled."
-msgstr ""
+msgstr "درخواست متوقف شد."
 
 #: fields.py:269 relations.py:206 relations.py:239 validators.py:98
 #: validators.py:181
 msgid "This field is required."
-msgstr ""
+msgstr "این فیلد اجباری است."
 
 #: fields.py:270
 msgid "This field may not be null."
-msgstr ""
+msgstr "این فیلد ممکن است تهی null باشد."
 
 #: fields.py:608 fields.py:639
 msgid "\"{input}\" is not a valid boolean."
-msgstr ""
+msgstr "ورودی \"{input}\"، یک متغیر  بولی معتبر نیست."
 
 #: fields.py:674
 msgid "This field may not be blank."
-msgstr ""
+msgstr "این فیلد ممکن است خالی blank باشد."
 
 #: fields.py:675 fields.py:1675
 msgid "Ensure this field has no more than {max_length} characters."
-msgstr ""
+msgstr "اطمینان حاصل کنید که این فیلد بیشتر از {حداکثر_ طول} نویسه (کارکتر) ندارد."
 
 #: fields.py:676
 msgid "Ensure this field has at least {min_length} characters."
-msgstr ""
+msgstr "اطمینان حاصل کنید که این فیلد {حداقل-طول} نویسه (کارکتر) داشته باشد."
 
 #: fields.py:713
 msgid "Enter a valid email address."
-msgstr ""
+msgstr "یک آدرس پست الکترونیک معتبر وارد نمایید."
 
 #: fields.py:724
 msgid "This value does not match the required pattern."
-msgstr ""
+msgstr "این مقدار با الگوی مورد نیاز مطابقت ندارد."
 
 #: fields.py:735
 msgid ""
 "Enter a valid \"slug\" consisting of letters, numbers, underscores or "
 "hyphens."
-msgstr ""
+msgstr "یک \"slug\"معتبر متشکل از حروف ، اعداد و خط ربط (ـ) وارد کنید."
 
 #: fields.py:747
 msgid "Enter a valid URL."
-msgstr ""
+msgstr "یک URL وارد معتبر نمایید. "
 
 #: fields.py:760
 msgid "\"{value}\" is not a valid UUID."
-msgstr ""
+msgstr " مقدار یک UUID معتبر نیست. "
 
 #: fields.py:796
 msgid "Enter a valid IPv4 or IPv6 address."
-msgstr ""
+msgstr "یک آدرس IPv4 و یا IPv6 معتبر وارد نمایید."
 
 #: fields.py:821
 msgid "A valid integer is required."
-msgstr ""
+msgstr "یک عدد صحیح معتبر لازم است."
 
 #: fields.py:822 fields.py:857 fields.py:891
 msgid "Ensure this value is less than or equal to {max_value}."
-msgstr ""
+msgstr "اطمینان حاصل کنید که این مقدار کمتر یا مساوی بیشینه {max_value} است."
 
 #: fields.py:823 fields.py:858 fields.py:892
 msgid "Ensure this value is greater than or equal to {min_value}."
-msgstr ""
+msgstr "اطمینان حاصل کنید که این مقدار بزرگتر یا مساوی کمینه {min_value} است."
 
 #: fields.py:824 fields.py:859 fields.py:896
 msgid "String value too large."
-msgstr ""
+msgstr "مقدار رشته خیلی بزرگ است."
 
 #: fields.py:856 fields.py:890
 msgid "A valid number is required."
-msgstr ""
+msgstr "یک شماره معتبر لازم است."
 
 #: fields.py:893
 msgid "Ensure that there are no more than {max_digits} digits in total."
-msgstr ""
+msgstr "اطمینان حاصل کنید که در کل بیشتر از {max_digits} رقم وجود ندارد"
 
 #: fields.py:894
 msgid ""
 "Ensure that there are no more than {max_decimal_places} decimal places."
-msgstr ""
+msgstr "اطمینان حاصل کنید که بیشتر از {max_decimal_places} مکان‌های اعشار وجود ندارد."
 
 #: fields.py:895
 msgid ""
 "Ensure that there are no more than {max_whole_digits} digits before the "
 "decimal point."
-msgstr ""
+msgstr "اطمینان حاصل کنید که بیشتر از {max_whole_digits} رقم‌ قبل از نقطه اعشار وجود ندارد."
 
 #: fields.py:1025
 msgid "Datetime has wrong format. Use one of these formats instead: {format}."
-msgstr ""
+msgstr "زمان و تاریخ دارای قالب اشتباه است. به جای آن از یکی از این قالب‌ها استفاده کنید."
 
 #: fields.py:1026
 msgid "Expected a datetime but got a date."
-msgstr ""
+msgstr "زمان و تاریخ انتظار می‌رود، اما تاریخ دریافت شده‌است."
 
 #: fields.py:1103
 msgid "Date has wrong format. Use one of these formats instead: {format}."
-msgstr ""
+msgstr "تاریخ دارای قالب نادرست است. به جای آن از یکی از این قالب‌ها استفاده کنید."
 
 #: fields.py:1104
 msgid "Expected a date but got a datetime."
-msgstr ""
+msgstr " تاریخ انتظار می‌رود، اما زمان و تاریخ دریافت شده‌است."
 
 #: fields.py:1170
 msgid "Time has wrong format. Use one of these formats instead: {format}."
-msgstr ""
+msgstr " قالب زمان نادرست است. به جای آن از یکی از این قالب‌ها استفاده کنید."
 
 #: fields.py:1232
 msgid "Duration has wrong format. Use one of these formats instead: {format}."
-msgstr ""
+msgstr " قالب مدت زمان نادرست است. به جای آن از یکی از این قالب‌ها استفاده کنید:"
 
 #: fields.py:1251 fields.py:1300
 msgid "\"{input}\" is not a valid choice."
-msgstr ""
+msgstr "ورودی یک انتخاب معتبر نیست."
 
 #: fields.py:1254 relations.py:71 relations.py:441
 msgid "More than {count} items..."
-msgstr ""
+msgstr "بیش از حد آیتم دارد..."
 
 #: fields.py:1301 fields.py:1448 relations.py:437 serializers.py:524
 msgid "Expected a list of items but got type \"{input_type}\"."
-msgstr ""
+msgstr "لیستی از موارد انتظار می‌رود اما از \"{input_type}\" برخوردار است."
 
 #: fields.py:1302
 msgid "This selection may not be empty."
-msgstr ""
+msgstr "این انتخاب ممکن است خالی نباشد."
 
 #: fields.py:1339
 msgid "\"{input}\" is not a valid path choice."
-msgstr ""
+msgstr "ورودی یک انتخاب مسیر معتبر نیست."
 
 #: fields.py:1358
 msgid "No file was submitted."
-msgstr ""
+msgstr "هیچ پرونده‌ای ارسال نشد"
 
 #: fields.py:1359
 msgid ""
 "The submitted data was not a file. Check the encoding type on the form."
-msgstr ""
+msgstr "داده ارسالی پرونده نبود. نوع رمزگذاری را روی فرم بررسی کنید."
 
 #: fields.py:1360
 msgid "No filename could be determined."
-msgstr ""
+msgstr "نام پرونده قابل تعیین نیست."
 
 #: fields.py:1361
 msgid "The submitted file is empty."
-msgstr ""
+msgstr "پرونده ارسالی خالی است."
 
 #: fields.py:1362
 msgid ""
 "Ensure this filename has at most {max_length} characters (it has {length})."
-msgstr ""
+msgstr "اطمینان حاصل کنید که در نام پرونده حداکثر {max_length} نویسه وجود دارد."
 
 #: fields.py:1410
 msgid ""
 "Upload a valid image. The file you uploaded was either not an image or a "
 "corrupted image."
-msgstr ""
+msgstr "تصویری معتبر بارگذاری کنید. فایلی که آپلود کردید یا تصویری نبوده و یا یک تصویر خراب است."
 
 #: fields.py:1449 relations.py:438 serializers.py:525
 msgid "This list may not be empty."
-msgstr ""
+msgstr "این لیست ممکن است خالی نباشد."
 
 #: fields.py:1502
 msgid "Expected a dictionary of items but got type \"{input_type}\"."
-msgstr ""
+msgstr "باید یک دیکشنری از آیتم‌ها باشد نه یک \"{input_type}\""
 
 #: fields.py:1549
 msgid "Value must be valid JSON."
-msgstr ""
+msgstr "مقدار باید JSON معتبر باشد."
 
 #: filters.py:36 templates/rest_framework/filters/django_filter.html:5
 msgid "Submit"
-msgstr ""
+msgstr "ارسال"
 
 #: filters.py:336
 msgid "ascending"
-msgstr ""
+msgstr "صعودی"
 
 #: filters.py:337
 msgid "descending"
-msgstr ""
+msgstr "نزولی"
 
 #: pagination.py:193
 msgid "Invalid page."
-msgstr ""
+msgstr "صفحه نامعتبر"
 
 #: pagination.py:427
 msgid "Invalid cursor"
-msgstr ""
+msgstr "مکان نما نامعتبر است."
 
 #: relations.py:207
 msgid "Invalid pk \"{pk_value}\" - object does not exist."
-msgstr ""
+msgstr "مقدار کلیداصلی  \"{pk_value}\" نامعتبر است- شی وجود ندارد."
 
 #: relations.py:208
 msgid "Incorrect type. Expected pk value, received {data_type}."
-msgstr ""
+msgstr "نوع نامعتبر است. مقدار کلیداصلی  \"{pk_value}\" مد نظر است ولی {data_type} دریافت شده‌است."
 
 #: relations.py:240
 msgid "Invalid hyperlink - No URL match."
-msgstr ""
+msgstr "پیوند لینک نامعتبر است - با URLای مطابقت ندارد."
 
 #: relations.py:241
 msgid "Invalid hyperlink - Incorrect URL match."
-msgstr ""
+msgstr "پیوند لینک نامعتبر است - تطابق URL نادرست است."
 
 #: relations.py:242
 msgid "Invalid hyperlink - Object does not exist."
-msgstr ""
+msgstr "پیوند لینک نامعتبر است - شی وجود ندارد"
 
 #: relations.py:243
 msgid "Incorrect type. Expected URL string, received {data_type}."
-msgstr ""
+msgstr "نوع نامعتبر است. باید یک رشته URL باشد ولی {data_type} دریافت شده‌است."
 
 #: relations.py:401
 msgid "Object with {slug_name}={value} does not exist."
-msgstr ""
+msgstr "شی با {slug_name}={value} وجود ندارد."
 
 #: relations.py:402
 msgid "Invalid value."
-msgstr ""
+msgstr "مقدار نامعتبر است."
 
 #: serializers.py:326
 msgid "Invalid data. Expected a dictionary, but got {datatype}."
-msgstr ""
+msgstr "داده نامعتبر است. باید دیکشنری باشد ولی {datatype} است."
 
 #: templates/rest_framework/admin.html:116
 #: templates/rest_framework/base.html:128
 msgid "Filters"
-msgstr ""
+msgstr "فیلترها"
 
 #: templates/rest_framework/filters/django_filter.html:2
 #: templates/rest_framework/filters/django_filter_crispyforms.html:4
 msgid "Field filters"
-msgstr ""
+msgstr "فیلترهای فیلد"
 
 #: templates/rest_framework/filters/ordering.html:3
 msgid "Ordering"
-msgstr ""
+msgstr "مرتب‌سازی"
 
 #: templates/rest_framework/filters/search.html:2
 msgid "Search"
-msgstr ""
+msgstr "جستجو"
 
 #: templates/rest_framework/horizontal/radio.html:2
 #: templates/rest_framework/inline/radio.html:2
 #: templates/rest_framework/vertical/radio.html:2
 msgid "None"
-msgstr ""
+msgstr "هیچ‌"
 
 #: templates/rest_framework/horizontal/select_multiple.html:2
 #: templates/rest_framework/inline/select_multiple.html:2
 #: templates/rest_framework/vertical/select_multiple.html:2
 msgid "No items to select."
-msgstr ""
+msgstr "هیچ موردی برای انتخاب وجود ندارد."
 
 #: validators.py:43
 msgid "This field must be unique."
-msgstr ""
+msgstr "این فلید باید منحصربه‌فرد باشد."
 
 #: validators.py:97
 msgid "The fields {field_names} must make a unique set."
-msgstr ""
+msgstr "فیلدها {field_names} باید یک مجموعه منحصربه‌فرد را ایجاد کند. "
 
 #: validators.py:245
 msgid "This field must be unique for the \"{date_field}\" date."
-msgstr ""
+msgstr "روز این فیلد برای \"{date_field}\" باید منحصربه‌فرد باشد."
 
 #: validators.py:260
 msgid "This field must be unique for the \"{date_field}\" month."
-msgstr ""
+msgstr "ماه این فیلد برای \"{date_field}\" باید منحصربه‌فرد باشد."
 
 #: validators.py:273
 msgid "This field must be unique for the \"{date_field}\" year."
-msgstr ""
+msgstr "سال این فیلد برای \"{date_field}\" باید منحصربه‌فرد باشد."
 
 #: versioning.py:42
 msgid "Invalid version in \"Accept\" header."
-msgstr ""
+msgstr " نسخه نامعتبر در سرآیند \"Accept\" "
 
 #: versioning.py:73
 msgid "Invalid version in URL path."
-msgstr ""
+msgstr "نسخه نامعتبر در مسیر URL."
 
 #: versioning.py:115
 msgid "Invalid version in URL path. Does not match any version namespace."
-msgstr ""
+msgstr "نسخه نامعتبر در مسیر URL. با هیچ نسخه نام‌گذاری شده‌ای مطابقت ندارد"
 
 #: versioning.py:147
 msgid "Invalid version in hostname."
-msgstr ""
+msgstr "نسخه نامعتبر در نام میزبان."
 
 #: versioning.py:169
 msgid "Invalid version in query parameter."
-msgstr ""
+msgstr " نسخه نامعتبر در پارامتر جستار (کوئری)."
 
 #: views.py:88
 msgid "Permission denied."
-msgstr ""
+msgstr "مجوز دسترسی ممنوع است."
