Minor docs tweaking

--- a/docs/community/3.11-announcement.md
+++ b/docs/community/3.11-announcement.md
@@ -38,23 +38,23 @@ include:
 * Porting of the old CoreAPI parsing of docstrings to form OpenAPI operation
   descriptions.
 
-    Here with an example view class:
+In this example view operation descriptions for the `get` and `post` methods will
+be extracted from the class docstring:
 
-        class DocStringExampleListView(APIView):
-        """
-        get: A description of my GET operation.
-        post: A description of my POST operation.
-        """
-        permission_classes = [permissions.IsAuthenticatedOrReadOnly]
+```python
+class DocStringExampleListView(APIView):
+"""
+get: A description of my GET operation.
+post: A description of my POST operation.
+"""
+    permission_classes = [permissions.IsAuthenticatedOrReadOnly]
 
-        def get(self, *args, **kwargs):
-            pass
+    def get(self, request, *args, **kwargs):
+        ...
 
-        def post(self, request, *args, **kwargs):
-            pass
-
-    Operation descriptions for the `get` and `post` methods will be extracted
-    from the class docstring.
+    def post(self, request, *args, **kwargs):
+        ...
+```
 
 ## Validator / Default Context
 
